syntax = "proto3";

option csharp_namespace = "ExchangeRatesService";

package exchange_rates_service;

// The Exchange Rates service definition.
service ExchangeRatesProvider {
  rpc GetRates (RatesRequest) returns (RatesResponse);
}

// The request message containing the user's name.
message RatesRequest {
  string base_currency = 1;
}

// The response message containing the greetings.
message RatesResponse{
  string date = 1;
  string base_currency = 2;
  map<string, double> rates = 3;
}
